--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,21 +1,34 @@
-version: '3.9'
-
 services:
-
-  db_dzencode:
-    container_name: db_dzencode
+  nginx:
+    build: ./nginx
+    image: nginx
+    container_name: "nginx_cont"
     ports:
-      - "5432:5432"
-    image: postgres
-    restart: always
-    shm_size: 128mb
-
+      - 80:80
+    depends_on:
+      - django_app
+  django_app:
+    image: django_app
+    build:
+      context: ./app
+    command: >
+      bash -c "python3 manage.py makemigrations && python3 manage.py migrate && gunicorn app.wsgi --bind 0.0.0.0:8001"
+    container_name: "django_cont"
+    ports:
+      - 8001:8001
+    env_file:
+      - "./app/.env"
+    depends_on:
+      db:
+        condition: service_started
+    restart: "always"
+    
+  db:
+    image: mysql
+    container_name: "db_cont"
     environment:
-      POSTGRES_PASSWORD: root
-      POSTGRES_USER: admin
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
+      - MYSQL_ROOT_PASSWORD=${PASSWORD}
+      - MYSQL_USER=${USER}
+      - MYSQL_DATABASE=${NAME}
+    volumes:
+      - ./data/mysql/db:/var/lib/mysql
