--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 JWT_KEY = 'qwesaxxcacxz#q123'
 SECRET_KEY='django-insecure-ef_q6vu*=()rd#&c-q*bc_%1y^=a8=70uvhugs=zg9#42+nab6'
 
-ENGINE= 'django.db.backends.mysql'
-NAME= 'db_dzencode'
-USER= 'root'
-PASSWORD= 'qweasdxcsf'
-HOST= 'db'
-PORT= '3306'
+DB_ENGINE= 'django.db.backends.mysql'
+DB_NAME= 'db_dzencode'
+DB_USER= 'root'
+DB_PASSWORD= 'qweasdxcsf'
+DB_HOST= 'db'
+DB_PORT= '3306'
     
+WEBSITE_NAME="django"
+DOMAIN_NAME=".test"
